--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>Escanear Placa</h1>
+  <h1>Escanear Placa 01</h1>
   <video id="video" autoplay playsinline></video>
   <br>
   <button onclick="capturarFoto()">Capturar</button>
