--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       { placa: "ABC123", nombre: "Juan Pérez" },
       { placa: "XYZ789", nombre: "Ana Gómez" },
       { placa: "JKL456", nombre: "Empresa X" },
+      { placa: "PKYD)(", nombre: "Caeza Movil" },
     ];
 
     navigator.mediaDevices.getUserMedia({ 
