--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       { placa: "XYZ789", nombre: "Ana Gómez" },
       { placa: "JKL456", nombre: "Empresa X" },
       { placa: "PKYD98", nombre: "Cid Jr" },
+      { placa: "JKGT75", nombre: "Superman" },
     ];
 
     navigator.mediaDevices.getUserMedia({ 
